@@ -1,4 +1,4 @@
-.TH VIFM 1 "September 04, 2015" "vifm 0.8"
+.TH VIFM 1 "September 10, 2015" "vifm 0.8"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -73,6 +73,9 @@ Log some errors to $VIFM/log.
 Also /var/log/vifm\-startup\-log (on *nix) and startup\-log in the directory of
 executable (on Windows) is used to log startup process (when configuration
 directory isn't determined).
+.TP
+.BI \-\-server\-list
+List available server names and exit.
 .TP
 .BI "\-\-remote"
 Sends the rest of command line to the active vifm server (one of already running
