@@ -51,6 +51,9 @@
 	Added dynamic view column alignment (specified by "*", just like "-" for
 	left alignment).  Patch by Cosmin Popescu (a.k.a. cosminadrianpopescu).
 
+	Added --server-list command-line option that enumerates names of currently
+	running vifm servers.
+
 	Do not finish argument parsing after finding --help or --version,
 	continue and validate the rest of command-line.  Thanks to Svyatoslav
 	Mishyn (a.k.a. juef).
